###############################################################################
## NEWS to package MKmisc
###############################################################################

###########################################################
## Version 0.996
###########################################################
- extended function or2rr

###########################################################
## Version 0.995
###########################################################
- added function sIQR for computing standardized IQR

###########################################################
## Version 0.994
###########################################################
- added function power.nb.test for computing sample size or power for comparing
  two negative binomial rates

###########################################################
## Version 0.993
###########################################################
- added function madCI for computing confidence intervals for MAD

###########################################################
## Version 0.992
###########################################################
- corrected bug in quantileCI reported by Rogier Donders (estimate always
  median independent of specified prob)

###########################################################
## Version 0.991
###########################################################
- added function simCorVars to simulate a pair of variables with a prespecified
  correlation

###########################################################
## Version 0.99
###########################################################
- added function to compute t-test based on multiple imputed datasets
- moved packages stats and graphics from Depends to Imports and added respective
  imports directives to NAMESPACE file
- added grDevices to Imports
- use of importFrom in NAMESPACE file except for package stats
- added Amelia to Suggests


###########################################################