@@ -1,6 +1,6 @@
 Package: MKmisc
 Version: 0.996
-Date: 2016-12-07
+Date: 2016-12-12
 Title: Miscellaneous Functions from M. Kohl
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de")
