@@ -10,6 +10,7 @@ export(simCorVars,
        quantileCI,
        medianCI,
        madCI,
+       normCI,
        power.diagnostic.test,
        power.nb.test,
        AUC,
