@@ -6,6 +6,8 @@
 ## Version 0.996
 ###########################################################
 - extended function or2rr
+- added function normCI for computing confidence intervals for mean and sd
+  of a normal distribution
 
 ###########################################################
 ## Version 0.995
